--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@sveltejs/kit": "^1.5.0",
 		"sass": "^1.62.0",
 		"svelte": "^3.54.0",
+		"svelte-preprocess": "^5.0.3",
 		"vite": "^4.2.0"
 	},
 	"type": "module"
