--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-vercel": "^1.0.0-next.66",
 		"@sveltejs/kit": "^1.5.0",
 		"sass": "^1.62.0",
 		"svelte": "^3.54.0",
